--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         <div class="header-container">
         <header>Fishgotchi</header>
         </div>
-    
-
+        <button>Fish Me</button>
     </div>
 </body>
 </html>
