--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
         <div class="header-container">
         <header>Fishgotchi</header>
         </div>
-        <button>Fish Me</button>
+        <div class="metric-container"></div>
+            <span>Timer</span>
+            <span>Age</span>
+            <button id="start-button">Fish Me</button>
+        <div class="stat-container"></div>
+            <span>life</span>
+            <span>sleepy</span>
+            <span>hungry</span>
+        <div class="fishgotchi-container"></div>
+        <div class="dark-container">
+            <button id="dark-mode">Night Time</button>
+        </div>
     </div>
 </body>
 </html>
