landing page connected to intro page with css and scripts

--- a/html/landing.html
+++ b/html/landing.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div>
-            <button>Fish Me</button>
+            <li class="link"><a href="./intro.html">Fish Me</a></li>
         </div>
     </div>
 </body>
