--- a/html/intro.html
+++ b/html/intro.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/intro.css">
+    <link href="https://fonts.googleapis.com/css?family=Waiting+for+the+Sunrise" rel="stylesheet" type="text/css"/>
     <script defer src="../scripts.js"></script>
     <title>Fish Bit</title>
 </head>
 <body>
-    <div class="container">
-        <header>Welcome to FISH BIT</header> 
-        <!-- typing animation for intro? -->
-        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus facere consequuntur laudantium aut ratione eligendi a, sunt suscipit odit nulla quidem, veniam dolorum aspernatur. Porro ex vero velit impedit quam.</h3>
+    <div class="header-container">
+        <div id="typedtext"></div>
+    </div>
+    <div class="img-character">
+        <img class="character" src="../291c8889608ab13.png" alt="Chinese Geisha">
     </div>
 </body>
 </html>
