start button added and background changed to black

--- a/html/intro.html
+++ b/html/intro.html
@@ -15,8 +15,11 @@
     <div class="header-container">
         <div id="typedtext"></div>
     </div>
-    <div class="img-character">
+    <div class="img-container">
         <img class="character" src="../291c8889608ab13.png" alt="Chinese Geisha">
+    </div>
+    <div class="button-container">
+        <button><a href="game page">Start</a></button>
     </div>
 </body>
 </html>
