--- a/html/game.html
+++ b/html/game.html
@@ -4,22 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/intro.css">
+    <link rel="stylesheet" href="../styles/game.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <script defer src="../scripts.js"></script>
-    <title>Fish Bit</title>
+    <title>Game On!</title>
 </head>
 <body>
-    <div class="header-container">
-        <div id="typedtext"></div>
-        <div class="button-container">
-            <button><a href="../html/game.html">Start</a></button>
-        </div>
-    </div>
-    <div class="img-container">
-        <img class="character" src="../291c8889608ab13.png" alt="Chinese Geisha">
-    </div>
+    
 </body>
 </html>
