geisha character css refined for animation

--- a/html/landing.html
+++ b/html/landing.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div>
-            <li class="link"><a href="./intro.html">Fish Me</a></li>
+            <link class="link"><a href="./intro.html">Fish Me</a></link>
         </div>
     </div>
 </body>
