one fish animated

--- a/html/game.html
+++ b/html/game.html
@@ -12,6 +12,8 @@
     <title>Game On!</title>
 </head>
 <body>
-    <img src="../fish.png" alt="fish">
+    <div class="fish_container">
+        <img src="../fish.png" alt="fish">
+    </div>
 </body>
 </html>
