7 fish animated in game using keyframes

--- a/html/game.html
+++ b/html/game.html
@@ -13,7 +13,13 @@
 </head>
 <body>
     <div class="fish_container">
-        <img src="../fish.png" alt="fish">
+        <img class="fish_1" src="../fish.png" alt="fish1">
+        <img class="fish_2" src="../fish.png" alt="fish2">
+        <img class="fish_3" src="../fish.png" alt="fish3">
+        <img class="fish_4" src="../fish.png" alt="fish4">
+        <img class="fish_5" src="../fish.png" alt="fish5">
+        <img class="fish_6" src="../fish.png" alt="fish6">
+        <img class="fish_7" src="../fish.png" alt="fish7">
     </div>
 </body>
 </html>
