variables added for cursor paddle

--- a/html/game.html
+++ b/html/game.html
@@ -8,10 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <script src="../scripts/game_scripts.js"></script>
+    <script defer src="../scripts/game_scripts.js"></script>
     <title>Game On!</title>
 </head>
 <body>
+    <canvas id="my_canvas" width="480" height="320"></canvas>
     <div class="fish_container">
         <img class="fish_1" src="../fish.png" alt="fish1">
         <img class="fish_2" src="../fish.png" alt="fish2">
