--- a/html/game.html
+++ b/html/game.html
@@ -12,7 +12,7 @@
     <title>Game On!</title>
 </head>
 <body>
-    <canvas id="my_canvas" width="480" height="320"></canvas>
+    <canvas id="my_canvas"></canvas>
     <div class="fish_container">
         <img class="fish_1" src="../fish.png" alt="fish1">
         <img class="fish_2" src="../fish.png" alt="fish2">
